# audiodecoder.sacd

./: .gitignore  .travis.yml  CMakeLists.txt  FindTagLib.cmake  FindWavPack.cmake  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.sacd/: addon.xml.in  changelog.txt
audiodecoder.sacd/resources/: settings.xml
audiodecoder.sacd/resources/language/resource.language.af_za/: strings.po
audiodecoder.sacd/resources/language/resource.language.am_et/: strings.po
audiodecoder.sacd/resources/language/resource.language.ar_sa/: strings.po
audiodecoder.sacd/resources/language/resource.language.ast_es/: strings.po
audiodecoder.sacd/resources/language/resource.language.az_az/: strings.po
audiodecoder.sacd/resources/language/resource.language.be_by/: strings.po
audiodecoder.sacd/resources/language/resource.language.bg_bg/: strings.po
audiodecoder.sacd/resources/language/resource.language.bs_ba/: strings.po
audiodecoder.sacd/resources/language/resource.language.ca_es/: strings.po
audiodecoder.sacd/resources/language/resource.language.cs_cz/: strings.po
audiodecoder.sacd/resources/language/resource.language.cy_gb/: strings.po
audiodecoder.sacd/resources/language/resource.language.da_dk/: strings.po
audiodecoder.sacd/resources/language/resource.language.de_de/: strings.po
audiodecoder.sacd/resources/language/resource.language.el_gr/: strings.po
audiodecoder.sacd/resources/language/resource.language.en_au/: strings.po
audiodecoder.sacd/resources/language/resource.language.en_gb/: strings.po
audiodecoder.sacd/resources/language/resource.language.en_nz/: strings.po
audiodecoder.sacd/resources/language/resource.language.en_us/: strings.po
audiodecoder.sacd/resources/language/resource.language.eo/: strings.po
audiodecoder.sacd/resources/language/resource.language.es_ar/: strings.po
audiodecoder.sacd/resources/language/resource.language.es_es/: strings.po
audiodecoder.sacd/resources/language/resource.language.es_mx/: strings.po
audiodecoder.sacd/resources/language/resource.language.et_ee/: strings.po
audiodecoder.sacd/resources/language/resource.language.eu_es/: strings.po
audiodecoder.sacd/resources/language/resource.language.fa_af/: strings.po
audiodecoder.sacd/resources/language/resource.language.fi_fi/: strings.po
audiodecoder.sacd/resources/language/resource.language.fo_fo/: strings.po
audiodecoder.sacd/resources/language/resource.language.fr_ca/: strings.po
audiodecoder.sacd/resources/language/resource.language.fr_fr/: strings.po
audiodecoder.sacd/resources/language/resource.language.gl_es/: strings.po
audiodecoder.sacd/resources/language/resource.language.he_il/: strings.po
audiodecoder.sacd/resources/language/resource.language.hi_in/: strings.po
audiodecoder.sacd/resources/language/resource.language.hr_hr/: strings.po
audiodecoder.sacd/resources/language/resource.language.hu_hu/: strings.po
audiodecoder.sacd/resources/language/resource.language.hy_am/: strings.po
audiodecoder.sacd/resources/language/resource.language.id_id/: strings.po
audiodecoder.sacd/resources/language/resource.language.is_is/: strings.po
audiodecoder.sacd/resources/language/resource.language.it_it/: strings.po
audiodecoder.sacd/resources/language/resource.language.ja_jp/: strings.po
audiodecoder.sacd/resources/language/resource.language.kl_gl/: strings.po
debian/: changelog.in  control  copyright  rules
depends/common/iconv/: platforms.txt
depends/common/taglib/: 0001-ID3v2Lookup.patch  0002-remove-boost.patch  0003-fix-cmake-static.patch  taglib.txt
depends/common/wavpack/: 01-fix-windows.patch  02-fix-android-arm-build.patch  03-fix-android-arch64.patch  04-fix-osx-x86_x64.patch  flags.txt  wavpack.sha256  wavpack.txt  windows-deps.txt
depends/windowsstore/iconv/: 01-Win-UWP-fix.patch
lib/: kodi-id3v2lib-note.txt  kodi-libdsdpcm-note.txt  kodi-libdstdec-note.txt
lib/id3v2lib/: CMakeLists.txt
lib/id3v2lib/include/: id3v2lib.h
lib/id3v2lib/src/: CMakeLists.txt  id3v2lib.c  utils.c
lib/libdsdpcm/: CMakeLists.txt  DSDPCMConstants.h  DSDPCMConverter.cpp  DSDPCMConverter.h  DSDPCMConverterDirect.h  DSDPCMConverterEngine.cpp  DSDPCMConverterEngine.h  DSDPCMConverterMultistage.h  DSDPCMFilterSetup.h  DSDPCMFir.h  DSDPCMFir_IPP.h  DSDPCMUtil.h  Fir_IPP.cpp  Fir_IPP.h  PCMPCMFir.h  PCMPCMFir_IPP.h  semaphore.h
lib/libdstdec/: CMakeLists.txt  ac.h  common.h  consts.h  ct.h  fh.h  fr.h  segment.h  stream.h
lib/libdstdec/binding/: dst_decoder_mt.cpp  dst_decoder_mt.h  semaphore.h
lib/libdstdec/decoder/: decoder.cpp  decoder.h
src/: Addon.cpp  Addon.h  SACDAudio.cpp  SACDAudio.h  Settings.cpp  Settings.h
src/sacd/: endianess.h  id3_tagger.cpp  id3_tagger.h  sacd_core.cpp  sacd_core.h  sacd_disc.cpp  sacd_disc.h  sacd_dsd.cpp  sacd_dsd.h  sacd_dsdiff.cpp  sacd_dsdiff.h  sacd_dsf.cpp  sacd_dsf.h  sacd_media.cpp  sacd_media.h  sacd_reader.h  scarletbook.cpp  scarletbook.h
(+41 files in other folders)
